--- a/style.css
+++ b/style.css
@@ -3,20 +3,8 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-h1 {
-
-    text-transform: uppercase;
-    font-size: 600;
-    color: #929292;
-
-    line-height: 40px;
-}
-
-.container {
+header {
     background: url("/images/ano_novo.jpg");
-    height: 100%;
-    width: 100%;
-    min-height: 500px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,33 +14,48 @@ h1 {
     align-items: center;
 }
 
-.header-content {
-    background: #ffffff;
-
-    height: 350px;
-    width: 85%;
-
-    text-align: center;
-    vertical-align: middle;
+h1 {
+    text-transform: uppercase;
+    font-size: 600;
+    color: #929292;
 
     line-height: 40px;
+}
 
+.year {
+    color: black;
+}
+
+p {
+    line-height: 40px;
+}
+
+.header-content {
+    background: #ffffff;
+    margin: 100px;
+    height: 17rem;
+    padding: 15px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
     border-radius: 8px;
 }
 
-.header-content h2 {
-    font-size: 30px;
+.main {
+    padding: 0 100px;
 }
 
 .main ul {
     list-style-type: none;
     display: flex;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
 
     margin-top: 20px;
-
-    align-items: center;
-    justify-content: center;
 }
 
 .main li video {
@@ -65,11 +68,58 @@ h1 {
 
 .text {
     height: 300px;
-    font-size: 30px;
+    font-size: 27px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 50px;
 
     text-align: center;
 }
 
 .text h1 {
     color: #000000;
+}
+
+.girlfriend {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.girlfriend p {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 30px;
+}
+
+.yes button {
+    text-transform: uppercase;
+    border: none;
+    padding: 5rem 27rem;
+    font-weight: 600;
+    font-size: 80px;
+    border-radius: 8px;
+
+    background-color: yellow;
+}
+
+.no button {
+    text-transform: lowercase;
+    padding: 10px 15px;
+    border: none;
+    font-weight: 600;
+    font-size: 10px;
+    border-radius: 8px;
+    margin-top: 10px;
+
+    background-color: gray;
+}
+
+footer {
+    text-align: center;
+    text-transform: uppercase;
+    color: black;
 }
