--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    background: url("/images/ano_novo.jpg");
+    background: url("./images/ano_novo.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
